<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.mitroshenko.newjob.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.mitroshenko.newjob.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_responses"
        android:name="com.mitroshenko.newjob.ui.responses.ResponsesFragment"
        android:label="@string/title_responses"
        tools:layout="@layout/fragment_responses" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.mitroshenko.newjob.ui.messages.MessagesFragment"
        android:label="Сообщения"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mitroshenko.newjob.ui.profile.ProfileFragment"
        android:label="Профиль"
        tools:layout="@layout/fragment_profile" />

</navigation>